--- a/clicker.html
+++ b/clicker.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Простая игра</title>
+    <style>
+        body {
+            text-align: center;
+            margin-top: 50px;
+            background-image: url('https://i.pinimg.com/originals/6f/06/fd/6f06fd23b4ab34a36c4593dd0279e8bb.gif');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center center;
+            transition: background-image 0.3s ease; /* Анимация перехода фона */
+        }
+        #clickButton {
+            width: 251px;
+            height: 251px;
+            font-size: 20px;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 50%;
+            border: none;
+            color: #ffffff;
+            position: relative;
+            background-color: transparent; /* Прозрачный фон */
+            overflow: hidden;
+            transition: background-color 0.3s ease; /* Анимация перехода цвета кнопки */
+        }
+        #clickButton:active {
+            width: 254px;
+            height: 254px;
+            background-color: rgba(192, 57, 43, 0.5); /* Цвет при активации (нажатии) */
+        }
+        #clickButton img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+        #counter {
+            position: absolute;
+            font-size: 24px;
+            color: #ffffff;
+            transform: translate(-50%, -50%);
+            /* Убрана анимация исчезновения */
+        }
+        #count {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #ffffff;
+        }
+        .show-and-hide {
+            opacity: 0; /* Начальная непрозрачность */
+            animation: showAndHide 1s ease forwards; /* Анимация отображения и исчезновения */
+        }
+        @keyframes showAndHide {
+            0% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+            50% {
+                opacity: 1;
+                transform: translateY(-50px);
+            }
+            100% {
+                opacity: 0;
+                transform: translateY(-100px);
+            }
+        }
+    </style>
+</head>
+<body>
+    <h1>Простая игра</h1>
+    <button id="clickButton" onclick="changeColorAndIncrement(event)">
+        <img src="https://pngicon.ru/file/uploads/banan.png" alt="Банан"> 
+        <span id="counter">1</span>
+        <h2>Жми меня!</h2>
+    </button>
+    <div id="count">Количество нажатий: <span id="clickCount">0</span></div>
 
+    <script>
+        var clickCounter = 0;
+
+        function changeColorAndIncrement(event) {
+            var button = document.getElementById('clickButton');
+            var counter = document.getElementById('counter');
+            var clickCount = document.getElementById('clickCount');
+            var randomColor = getRandomColor();
+
+            // Изменение цвета кнопки
+            button.style.backgroundColor = randomColor;
+
+            // Отображение и анимация исчезновения цифры
+            counter.classList.remove('show-and-hide');
+            void counter.offsetWidth; // Перезапускаем анимацию
+            counter.style.left = `${event.clientX - button.getBoundingClientRect().left}px`; // Устанавливаем позицию анимации по X
+            counter.style.top = `${event.clientY - button.getBoundingClientRect().top}px`; // Устанавливаем позицию анимации по Y
+            counter.classList.add('show-and-hide');
+
+            // Увеличение счетчика и вывод количества нажатий
+            clickCounter++;
+            clickCount.textContent = clickCounter;
+        }
+
+        function getRandomColor() {
+            // Возвращает случайный цвет в формате rgb
+            return `rgb(${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)}, ${Math.floor(Math.random() * 256)})`;
+        }
+    </script>
+</body>
+</html>
