--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Chrome Dinosaur Game</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 <body>
     <canvas id="game" height="400" width="800">
     </canvas>
-    <script src="script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
