--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <canvas id="game" height="400" width="800">
+    <canvas id="game" height="400" width="device-width">
     </canvas>
     <script src="script.js"></script>
 </body>
