--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <canvas id="game" height="400" width="800">
     </canvas>
+    <div id="controls">
+        <button id="jumpButton">Jump</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
