--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <canvas id="game" height="400" width="800">
     </canvas>
     <div id="controls">
-        <button id="jumpButton">Прыгаем</button>
+        <button id="jumpButton">Прыгать</button>
     </div>
     <script src="script.js"></script>
 </body>
