--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="world" data-world>
     <div class="score" data-score>0</div>
-    <div class="start-screen" data-start-screen>Жми, чтобы начать!</div>
+    <div class="start-screen" data-start-screen>Жми на экран, чтобы начать!</div>
     <img src="imgs/ground.png" class="ground" data-ground>
     <img src="imgs/ground.png" class="ground" data-ground>
     <img src="imgs/dino-stationary.png" class="dino" data-dino>
