--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="mobile-web-app-capable" content="yes">
 
-	<title>Flappy Bird Game</title>
+	<title>Впечатлятор гейм</title>
 
 	<script src="sprite.js"></script>
 
