--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="mobile-web-app-capable" content="yes">
 
-	<title>Впечатлятор гейм</title>
+	<title>Флаппи гейм</title>
 
 	<script src="sprite.js"></script>
 
@@ -233,7 +233,7 @@ function main(){
 	 run();
 	 } 
 	 
-	 img.src="photo_2024-02-05_23-40-21.jpg";
+	 img.src="sheet.png";
 	 
 	 
 	 
