--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="mobile-web-app-capable" content="yes">
 
-	<title>Флаппи гейм</title>
+	<title>Flappy Bird Game</title>
 
 	<script src="sprite.js"></script>
 
@@ -298,5 +298,8 @@ main();
 </script>
 
 </body>
-
+<footer class="bg-dark">
+      <p><h3>Created:&copy;Priyadarshan Ghosh</h3><br>
+       
+    </footer>
 </html>
