--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ main();
 
 </body>
 <footer class="bg-dark">
-      <p><h3>Created:&copy;Priyadarshan Ghosh</h3><br>
+      <p><h3>Created:&copy;VADZIM ZHURAULIOU</h3><br>
        
     </footer>
 </html>
