--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="world" data-world>
     <div class="score" data-score>0</div>
     <div class="start-screen" data-start-screen>Жми, чтобы начать!</div>
-    <img src="imgs/ground.png" class="ground" data-ground>
-    <img src="imgs/ground.png" class="ground" data-ground>
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/016/589/400/small/wooden-table-wood-table-top-front-view-3d-render-isolated-png.png" class="ground" data-ground>
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/016/589/400/small/wooden-table-wood-table-top-front-view-3d-render-isolated-png.png" class="ground" data-ground>
     <img src="imgs/dino-stationary.png" class="dino" data-dino>
   </div>
 </body>
