--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="score" data-score>0</div>
     <div class="start-screen" data-start-screen>Жми, чтобы начать!</div>
     <img src="imgs/67166-lawn-grass-png-download-free.png" class="ground" data-ground>
-    <img src="imgs/67166-lawn-grass-png-download-free.png" class="ground" data-ground>
+    <img src="imgs/ground.png" class="ground" data-ground>
     <img src="imgs/dino-stationary.png" class="dino" data-dino>
   </div>
 </body>
