--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="world" data-world>
     <div class="score" data-score>0</div>
     <div class="start-screen" data-start-screen>Жми, чтобы начать!</div>
-    <img src="imgs/Place.png" class="ground" data-ground>
-    <img src="imgs/Place.png" class="ground" data-ground>
+    <img src="imgs/ground.png" class="ground" data-ground>
+    <img src="imgs/ground.png" class="ground" data-ground>
     <img src="imgs/dino-stationary.png" class="dino" data-dino>
   </div>
 </body>
